<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.anescobar.whatshapp2.whatshapp.controllers.activities.MainActivity">

    <item
        android:id="@+id/action_refreshIcon"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"
        android:title="@string/action_refresh" />

    <item
        android:id="@+id/action_searchIcon"
        android:icon="@drawable/ic_action_search_light"
        android:showAsAction="always"
        android:title="@string/action_searchFilterView" />

    <item
        android:id="@+id/action_about"
        android:showAsAction="never"
        android:title="@string/action_about_title" />

    <!--<item android:id="@+id/action_settings"-->
    <!--android:title="@string/action_settings_title"-->
    <!--android:showAsAction="never"/>-->

</menu>